src/objects/c2g__codaExchangeRate__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpcurrency</customHelpPage>
    <description>Stores exchange rates expressed in terms of home currency. A company has a rate table for each currency that it uses.</description>
    <fields>
        <fullName>c2g__ExchangeRateCurrency__c</fullName>
        <label>Exchange Rate Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Exchange Rates</relationshipLabel>
        <relationshipName>ExchangeRates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Exchange Rates</relationshipLabel>
        <relationshipName>ExchangeRates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Rate__c</fullName>
        <defaultValue>1.0</defaultValue>
        <label>Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__StartDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The start date of the Exchange rate</description>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Exchange Rate</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Exchange Rate ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exchange Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>